new services added for customer

--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.myswiggy.config</groupId>
-    <artifactId>config</artifactId>
+    <artifactId>config-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>config</name>
-    <description>config</description>
+    <name>config-service</name>
+    <description>config-service</description>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.0</spring-cloud.version>
