--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -10,4 +10,4 @@ logging.level.com.netflix.discovery=OFF
 
 #to enable peering
 #eureka.client.service-url.defaultZone= http://52.66.215.61:8761/eureka/
-#eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
