--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/nittysharma/swiggyConfigGit
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.username=nittysharma
-spring.cloud.config.server.git.password=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
+spring.cloud.config.server.git.password=${GIT_PASSWORD}
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
