--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=customer-service
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 spring.config.import=optional:configserver:http://localhost:8888
