--- a/menu/src/main/resources/application.properties
+++ b/menu/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=menu-service
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://13.235.53.252:8888
