--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=restaurant-service
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://13.235.53.252:8888
