--- a/customer/Dockerfile
+++ b/customer/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:latest
-ARG JAR_FILE=target/*.jar
-ADD ${JAR_FILE} customer-service.jar
-ADD src/main/resources/application.properties .
+ARG JAR_FILE=customer/target/*.jar
+COPY ${JAR_FILE} customer-service.jar
+COPY customer/src/main/resources/application.properties .
 EXPOSE 5050
 ENTRYPOINT ["java","-jar","/customer-service.jar"]
