--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:latest
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} config-server.jar
-COPY src/main/resources/application.properties .
+ARG JAR_FILE=config-service/target/*.jar
+COPY ${JAR_FILE} config-service/config-service.jar
+COPY config-service/src/main/resources/application.properties .
 EXPOSE 8888
-ENTRYPOINT ["java","-jar","/config-server.jar"]
+ENTRYPOINT ["java","-jar","/config-service.jar"]
