--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -33,7 +33,43 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
     - name: Build the Docker Image for Config Service
-      run: docker build . --file config/Dockerfile --build-arg JAR_FILE=config/target/*.jar --tag gaccount4m/swiggy-config-service:latest
+      run: docker build . --file config-service/Dockerfile --build-arg JAR_FILE=config-service/target/*.jar --tag gaccount4m/swiggy-config-service:latest
 
     - name: Docker Push Config
       run: docker push gaccount4m/swiggy-config-service
+
+    - name: Build the Docker Image for eureka Service
+      run: docker build . --file eureka/Dockerfile --build-arg JAR_FILE=eureka/target/*.jar --tag gaccount4m/swiggy-eureka-service:latest
+
+    - name: Docker Push Eureka
+      run: docker push gaccount4m/swiggy-eureka-service
+
+    - name: Build the Docker Image for menu Service
+      run: docker build . --file menu/Dockerfile --build-arg JAR_FILE=menu/target/*.jar --tag gaccount4m/swiggy-menu-service:latest
+
+    - name: Docker Push Menu
+      run: docker push gaccount4m/swiggy-menu-service
+
+    - name: Build the Docker Image for restaurant Service
+      run: docker build . --file restaurant/Dockerfile --build-arg JAR_FILE=restaurant/target/*.jar --tag gaccount4m/swiggy-restaurant-service:latest
+
+    - name: Docker Push Restaurant
+      run: docker push gaccount4m/swiggy-restaurant-service
+
+    - name: Build the Docker Image for Customer Service
+      run: docker build . --file customer/Dockerfile --build-arg JAR_FILE=customer/target/*.jar --tag gaccount4m/swiggy-customer-service:latest
+
+    - name: Docker Push Customer
+      run: docker push gaccount4m/swiggy-customer-service
+
+    - name: Build the Docker Image for Order Service
+      run: docker build . --file order/Dockerfile --build-arg JAR_FILE=order/target/*.jar --tag gaccount4m/swiggy-order-service:latest
+
+    - name: Docker Push Order
+      run: docker push gaccount4m/swiggy-order-service
+
+    - name: Build the Docker Image for Invoice Service
+      run: docker build . --file invoice/Dockerfile --build-arg JAR_FILE=invoice/target/*.jar --tag gaccount4m/swiggy-invoice-service:latest
+
+    - name: Docker Push Invoice
+      run: docker push gaccount4m/swiggy-invoice-service
