--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -31,6 +31,18 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        
+      
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build the Docker Image for Config Service
       run: docker build . --file config-service/Dockerfile --build-arg JAR_FILE=config-service/target/*.jar --tag gaccount4m/swiggy-config-service:latest
